@@ -1,6 +1,6 @@
 {
   "name": "simp-gnome",
-  "version": "9.3.0",
+  "version": "9.4.0",
   "author": "SIMP Team",
   "summary": "Provides useful settings to set up the GNOME desktop environment",
   "license": "Apache-2.0",
@@ -15,7 +15,7 @@
   "dependencies": [
     {
       "name": "simp/dconf",
-      "version_requirement": ">= 0.0.1 < 2.0.0"
+      "version_requirement": ">= 0.0.1 < 1.0.0"
     },
     {
       "name": "simp/polkit",
@@ -23,11 +23,11 @@
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.10.0 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 8.0.0 < 9.0.0"
+      "version_requirement": ">= 8.0.0 < 10.0.0"
     }
   ],
   "operatingsystem_support": [
@@ -68,7 +68,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 8.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
